--- a/EFGetStarted.AspNetCore.NewDb/EFGetStarted.AspNetCore.NewDb.csproj
+++ b/EFGetStarted.AspNetCore.NewDb/EFGetStarted.AspNetCore.NewDb.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="2.0.2" />
+    <PackageReference Include="microsoft.entityframeworkcore.tools" Version="2.0.2" />
+    <PackageReference Include="microsoft.visualstudio.web.codegeneration.design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
